--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "scripts": {
         "post-install-cmd": [
             "php artisan clear-compiled",
-            "php artisan optimize"
+            "php artisan optimize",
+            "gulp"
         ],
         "pre-update-cmd": [
             "php artisan clear-compiled"
@@ -42,8 +43,7 @@
             "php -r \"copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "php artisan key:generate",
-            "gulp"
+            "php artisan key:generate"
         ]
     },
     "config": {
