--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp": "^3.8.8"
   },
   "dependencies": {
+    "gulp-cli": "^0.3.0",
     "laravel-elixir": "^2.0.0",
     "bootstrap-sass": "^3.0.0"
   }
