--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "node": "0.12.x",
   "scripts": {"postinstall": "gulp production"},
   "devDependencies": {
-    "gulp": "^3.8.8"
   },
   "dependencies": {
     "gulp-cli": "^0.3.0",
+    "gulp": "^3.8.8",
     "laravel-elixir": "^2.0.0",
     "bootstrap-sass": "^3.0.0"
   }
